--- a/AlarmaVecinal/app/src/main/res/layout/activity_grupo.xml
+++ b/AlarmaVecinal/app/src/main/res/layout/activity_grupo.xml
@@ -11,10 +11,9 @@
         android:id="@+id/nota"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="nota"
+        android:text="Verifique su conexión a internet, no se ha sincronizado la información."
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="60dp"
-        android:textSize="20dp"
         android:padding="5dp"
         android:background="#302C2C"
         android:textColor="#ffffff"
@@ -172,33 +171,35 @@
         android:orientation="vertical"
         android:layout_marginTop="60dp"
         android:layout_marginBottom="60dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FF5722"
-            android:text="Por favor, alinear el codigo QR frente al otro dispositivo"
+            android:text="Por favor, alinear el codigo QR frente a la camara"
             android:layout_gravity="center"
-            android:layout_marginTop="50dp"/>
+            android:layout_marginTop="50dp"
+            android:gravity="center"/>
 
 
         <ImageView
             android:id="@+id/QR"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/imgqr"
-            android:layout_marginTop="20dp"/>
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="El codigo QR se escanea con el equipo del vecino que quiere agragar al grupo.\nTambien puede compartir el codigo por."
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/imgqr"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="El codigo QR se escanea con el equipo del vecino que quiere agregar al grupo.\nTambien puede compartir el codigo por."
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
+            android:textSize="11dp"
             android:gravity="center"/>
 
         <ImageView
