--- a/AlarmaVecinal/app/src/main/res/layout/content_principal.xml
+++ b/AlarmaVecinal/app/src/main/res/layout/content_principal.xml
@@ -48,23 +48,29 @@
         android:orientation="horizontal"
         android:layout_gravity="right"
         android:gravity="center_vertical"
-        android:layout_margin="10dp"
-        android:background="@drawable/redondeado">
+        android:layout_margin="10dp">
         <TextView
             android:id="@+id/nota"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No has guardado tu ubicación."
+            android:text="Guardar ubicación."
             android:textStyle="bold"
             android:textSize="15dp"
             android:layout_margin="5dp"
             android:textColor="@color/error"/>
 
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/switchgps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:theme="@style/FilterSwitchThemeGreen"
+            android:visibility="gone"/>
+
         <ImageView
             android:id="@+id/localizar_on"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/icono_location_on"
+            android:src="@drawable/icono_location"
             app:tint="@color/colorPrimary"
             android:visibility="visible"
             android:layout_margin="5dp"/>
@@ -74,6 +80,17 @@
     </LinearLayout>
 
 
+    <TextView
+        android:id="@+id/direccion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cargando dirección..."
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="60dp"
+        android:padding="5dp"
+        android:background="#302C2C"
+        android:textColor="#ffffff"
+        android:visibility="visible"/>
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/banner"
