--- a/AlarmaVecinal/app/src/main/res/layout/vecinos_card.xml
+++ b/AlarmaVecinal/app/src/main/res/layout/vecinos_card.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -21,7 +23,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="30dp">
             <TextView
                 android:id="@+id/nombre"
                 android:layout_width="wrap_content"
@@ -43,12 +47,12 @@
         </LinearLayout>
         <ImageView
             android:id="@+id/opcusuario"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
             android:src="@drawable/img_puntitos"
-            android:layout_gravity="right|center_vertical"
-            android:layout_marginRight="15dp"/>
-    </LinearLayout>
+            android:layout_gravity="right|center_vertical"/>
+
+    </FrameLayout>
 
 
 </FrameLayout>
